--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,4 @@
+
 @import './base/settings';
 @import './base/base';
 @import './components/box-layout';
@@ -11,3 +12,4 @@
 @import './components/visibility';
 @import './components/list';
 @import './components/loader';
+@import './components/quiz-page';
