--- a/src/styles/components/_quiz-page.scss
+++ b/src/styles/components/_quiz-page.scss
@@ -1,3 +1,4 @@
+
 .questionPage{
   height: 100vh;
   background: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)),url("https://i.ibb.co/p3wH8F1/alora-griffiths-Tl-Pi64vvi-Rc-unsplash.jpg");
@@ -180,7 +181,7 @@ flex-direction: column;
   .btn-cont {
     padding-left: 15vw;
   padding-right: 15vw;
-  margin-bottom: 1rem;
+  margin-bottom: 5vh;
   .btn{
     padding: 20px 5px
   }
