--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -13,3 +13,4 @@
 @import './components/list';
 @import './components/loader';
 @import './components/quiz-page';
+@import './components/allchallanges';
