--- a/src/styles/components/_allchallanges.scss
+++ b/src/styles/components/_allchallanges.scss
@@ -47,7 +47,7 @@ img {
       align-items: space-between;
       justify-content: space-between;
       .bottom h2 {
-        font-family: 'Times New Roman', Times, serif;
+        font-family: Tahoma;
         font-size: 4rem;
         font-weight: 100;
       }
@@ -75,6 +75,7 @@ img {
       display: flex;
       justify-content: space-between;
       align-items: center;
+      
       
       .bookmark {
         margin-left: 5rem;
