--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,3 +14,4 @@
 @import './components/loader';
 @import './components/quiz-page';
 @import './components/allchallanges';
+@import './components/navbar';
