--- a/src/styles/components/_quiz-page.scss
+++ b/src/styles/components/_quiz-page.scss
@@ -253,3 +253,24 @@ h5{
     transform: translateY(-10px);
     transition: opacity 150ms linear, transform 150ms ease-in;
 }
+.move-enter {
+  opacity: 0.01;
+  transform: translate(100vw, 0)
+}
+
+.move-enter-active {
+  opacity: 1;
+  transform: translate(0, 0);
+  transition: all 600ms ease-in;
+}
+
+.move-exit {
+  opacity: 1;
+  transform: translate(0, 0)
+}
+
+.move-exit-active {
+  opacity: 0.01;
+  transform: translate(-100vw, 0);
+  transition: all 300ms ease-in;
+}
