--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -15,3 +15,4 @@
 @import './components/quiz-page';
 @import './components/allchallanges';
 @import './components/navbar';
+@import './components/choosemode';
